// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Audit/ActionAuditStatut Audite 1`] = `
<div
  className="px-2 w-full bg-[#e8edff]"
>
  <div
    className="w-52"
  >
    <button
      aria-expanded={false}
      aria-label="ouvrir le menu"
      className="flex items-center w-full p-2 -ml-2 text-left text-sm"
      data-test="action-audit-statut"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onPointerDown={[Function]}
    >
      <p
        className="fr-badge fr-badge--success fr-badge--no-icon fr-text--xs"
      >
        Audité
      </p>
      <span
        className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Audit/ActionAuditStatut En Cours 1`] = `
<div
  className="px-2 w-full bg-[#e8edff]"
>
  <div
    className="w-52"
  >
    <button
      aria-expanded={false}
      aria-label="ouvrir le menu"
      className="flex items-center w-full p-2 -ml-2 text-left text-sm"
      data-test="action-audit-statut"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onPointerDown={[Function]}
    >
      <p
        className="fr-badge fr-badge--info fr-badge--no-icon fr-text--xs"
      >
        Audit en cours
      </p>
      <span
        className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Audit/ActionAuditStatut Non Audite 1`] = `
<div
  className="px-2 w-full bg-[#e8edff]"
>
  <div
    className="w-52"
  >
    <button
      aria-expanded={false}
      aria-label="ouvrir le menu"
      className="flex items-center w-full p-2 -ml-2 text-left text-sm"
      data-test="action-audit-statut"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onPointerDown={[Function]}
    >
      <p
        className="fr-badge fr-badge--warning fr-badge--no-icon fr-text--xs"
      >
        Non audité
      </p>
      <span
        className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Audit/ActionAuditStatut Read Only 1`] = `
<div
  className="px-2 w-full bg-[#e8edff]"
>
  <div
    className="py-2"
    data-test="action-audit-statut-ro"
  >
    <p
      className="fr-badge fr-badge--success fr-badge--no-icon fr-text--xs"
    >
      Audité
    </p>
  </div>
</div>
`;
